@@ -120,6 +120,8 @@
             // 
             // AdjustColorsControlBase
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(248, 211);
             this.Name = "AdjustColorsControlBase";
             this.pnlSettings.ResumeLayout(false);
