@@ -99,6 +99,8 @@
             // 
             // ColorSpaceControl
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(384, 421);
             this.Name = "ColorSpaceControl";
             this.pnlSettings.ResumeLayout(false);
