@@ -65,6 +65,8 @@
             // 
             // CountColorsControl
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Controls.Add(this.lblCountColorsStatus);
             this.Controls.Add(this.pnlButton);
             this.Controls.Add(this.progress);
