@@ -106,8 +106,10 @@
             this.progress.TabIndex = 2;
             this.progress.Text = "drawingProgressStatusStrip1";
             // 
-            // DownloadResourcesForm
+            // DownloadResourcesControl
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(364, 226);
             this.Controls.Add(this.gridDownloadableResources);
             this.Controls.Add(this.okCancelButtons);
