@@ -19,6 +19,8 @@
             // 
             // GraphicsVisualizerControl
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(334, 316);
             this.Name = "GraphicsVisualizerControl";
             this.ResumeLayout(false);
