@@ -17,8 +17,10 @@
         {
             this.SuspendLayout();
             // 
-            // AppMainControl
+            // MainUserControl
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(484, 311);
             this.Name = "MainUserControl";
             this.ResumeLayout(false);
