@@ -184,8 +184,10 @@ namespace KGySoft.Drawing.ImagingTools.View.UserControls
             this.lblAvailableVersion.TabIndex = 0;
             this.lblAvailableVersion.Text = "lblAvailableVersion";
             // 
-            // ManageInstallationsForm
+            // ManageInstallationsControl
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(404, 211);
             this.Controls.Add(this.gbInstallation);
             this.Controls.Add(this.gbVisualStudioVersions);
