@@ -285,6 +285,8 @@
             // 
             // ResizeBitmapForm
             // 
+            this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
+            this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
             this.Size = new System.Drawing.Size(334, 291);
             this.Name = "ResizeBitmapControl";
             this.pnlSettings.ResumeLayout(false);
